# TCP_chat

./: README.md  main.py  pyproject.toml
backend/: server.py
backend/api/: consts.py  factory.py  models.py
backend/api/actions/: actions.py  reactables.py  schemas.py
tests/: client.py
