[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["B0R0koko <mvmironov@edu.hse.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
attr = "^0.3.2"
pydantic = "^1.9.1"
aioconsole = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
